fix: background on mobile view

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,6 +27,10 @@ body {
       transparent 60%
     ),
     var(--bg);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+
 }
 
 a {
